# newbblox

./: .gitignore  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  block.cpp  block.h  debug.cpp  debug.h  main.cpp  newbblox  piece.cpp  piece.h  random.cpp  random.h  tetris.cpp  tetris.h  timer.cpp  timer.h
src/.deps/: block.Po  debug.Po  main.Po  piece.Po  random.Po  tetris.Po  timer.Po
