#imagesdir = $(datadir)/images
#images_DATA = \
#	images/1.bmp \
#	images/2.bmp \
#	images/3.png \
#	images/4.png \
#	images/5.png \
#	images/6.png \
#	images/7.png 
#	images/background.bmp

#fontsdir = $(datadir)/fonts
#fonts_DATA = \
#	fonts/FreeSans.ttf \
#	fonts/tahoma.ttf
#
#EXTRA_DIST = $(pixmaps_DATA)

nobase_dist_mdata_DATA = $(DATA_FILES)
mdatadir = $(datadir)
